# conteo-electoral

./: .env.example  .env.staging.example  .gitignore  README.md  app-www.js  main-ROIQD5MY.js  polyfills-R7OGVS7E.js  pyproject.toml  table.md
.github/workflows/: deploy-frontend.yml  deploy-staging.yml
data/: departamentos-extranjero.md  departamentos.md  distrito.md  impugnadas.md  locales.md  padron.md  partidos.md  provincia.md  regiones.md  votantes.md
docs/: IMPLEMENTACION_DETALLADA.md  api.md  backend.md  cloudflare.md  finish.md  impugnadas-job.md  plan.md  race.md  run.md  votantes.xlsx
election_counter/: __init__.py  __main__.py  cli.py  onpe_region_extras.py  parsers.py  projection.py  publish.py  reporting.py  scraper.py  scraper_vps.py  utils.py  web.py
frontend/: .htaccess  app.js  index.html  parties.json  projection-modes.js  robots.txt  sitemap.xml  style.css
frontend/api/: index.php
frontend/race/: index.html  race.js  style.css
frontend/timelapse/: index.html  timelapse.js
outputs/: diag-console.json  diag-page.html  diag-summary.json  perulainen-main.css  perulainen-main.js  projection.json  projection_summary.md  raw_region_results.json
planning/: actas.md  cozy.md  impugnadas.md  jne.md  locales.md  panels.md  race.md  timelapse.md
scripts/: build_frontend.py  deploy_frontend.bat  deploy_frontend.py  scraper-vps.py  start_duckdns.bat  start_hud.bat  start_pipeline.bat
tests/: test_onpe_region_extras.py  test_projection.py  test_publish_impugnadas.py
vps/: __init__.py  runner.py  scraper-vps.py  scraper_vps.py
(+1672 files in other folders)
